# Lepton3_BBB

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
bbb_life_tracker/: CMakeLists.txt  README.md  bbb_life_tracker.cpp  test_tracker.cpp
bbb_life_tracker/flir_tracker/include/: Palettes.h  flir_tracker.h
bbb_life_tracker/flir_tracker/src/: Palettes.cpp  flir_tracker.cpp
bbb_life_tracker/videoEncoder/include/: videoEncoder.h
grabber_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
grabber_lib/Lepton_SDK/include/: LEPTON_I2C_Protocol.h  LEPTON_I2C_Service.h  LEPTON_SDK.h  LEPTON_VID.h  aardvark.h
grabber_lib/Lepton_SDK/src/: LEPTON_AGC.c  LEPTON_I2C_Protocol.c  LEPTON_I2C_Service.c  LEPTON_OEM.c  LEPTON_RAD.c  LEPTON_SDK.c  LEPTON_SYS.c  LEPTON_VID.c  bbb_I2C.c
grabber_lib/include/: Lepton3.hpp  LeptonThread.hpp  Lepton_I2C.h  SPI.h  lepton3_grabber.hpp
grabber_lib/src/: Lepton3.cpp  LeptonThread.cpp  Lepton_I2C.cpp  SPI.cpp  lepton3_grabber.cpp
gstreamer_demo/: CMakeLists.txt  README.md  gstreamer_demo.cpp
gstreamer_demo/CMakeModules/: FindGStreamer-0.1.cmake  FindGStreamer-0.1.cmake~
gstreamer_demo/videoEncoder/include/: videoEncoder.h
gstreamer_demo/videoEncoder/src/: videoEncoder.cpp
lepton3_driver/: Makefile  lepton3.c
opencv_demo/: CMakeLists.txt  README.md  opencv_demo.cpp
